.golden/1179194556644623826/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:28:
  |
7 | main = putStrLn [f|{hello:_s}|]
  |                            ^
String type is incompatible with grouping (_ or ,).

    • In the quasi-quotation: [f|{hello:_s}|]
  |
7 | main = putStrLn [f|{hello:_s}|]
  |                    ^^^^^^^^^^^^
